# chloro

./: .gitignore  Cargo.toml  Justfile  README.md
chloro/: CHANGELOG.md  Cargo.toml  README.md
chloro-core/: CHANGELOG.md  Cargo.toml  README.md
chloro-core/src/: debug.rs  formatter.rs  lib.rs
chloro-core/src/formatter/: config.rs  node.rs  printer.rs
chloro-core/src/formatter/node/: block.rs  comment.rs  comments.rs  common.rs  const_static.rs  debug.rs  doccomment.rs  enumdef.rs  expr.rs  externblock.rs  externcrate.rs  function.rs  implblock.rs  imports.rs  macrocall.rs  module.rs  structdef.rs  structliteral.rs  traitdef.rs  typealias.rs  useitem.rs
chloro-core/src/formatter/node/common/: comments.rs  fields.rs  header.rs
chloro-core/src/formatter/node/expr/: collections.rs  controlflow.rs  jumps.rs  operators.rs  simple.rs
chloro-core/src/formatter/node/useitem/: grouping.rs  sort.rs  tests.rs
chloro-core/src/tests/: formatter.rs
chloro-core/src/tests/formatter/: attributes.rs  comments.rs  controlflow.rs  externcrate.rs  functions.rs  impl_blocks.rs  macros.rs  method_chains.rs  self_format.rs  struct_literals.rs  structs.rs  use_items.rs
chloro-core/tests/: basic.rs
chloro-core/tests/conformance/: basic.rs  batch.rs  compare.rs  helpers.rs  main.rs  roundtrip.rs
chloro-core/tests/conformance/helpers/: comparison.rs  fixture.rs  roundtrip.rs  rustfmt.rs
chloro-core/tests/conformance/output/: asterism_config.rs.chloro.rs  asterism_tests_input.rs.chloro.rs  asterism_ui.rs.diff
chloro-core/tests/conformance/snapshots/: asterism_app_state.chloro.rs  asterism_app_state.diff  asterism_app_state.rs.chloro.rs  asterism_app_state.rs.diff  asterism_app_state_min.chloro.rs  asterism_app_state_min.diff  asterism_config.chloro.rs  asterism_config.diff  asterism_edit_plan.chloro.rs  asterism_edit_plan.diff  asterism_edit_plan.rs.diff  asterism_formats.chloro.rs  asterism_formats.diff  asterism_formats.rs.chloro.rs  asterism_formats.rs.diff  asterism_formats_difftastic.chloro.rs  asterism_formats_difftastic.diff  asterism_formats_difftastic.rs.chloro.rs  asterism_formats_difftastic.rs.diff  asterism_formats_markdown.chloro.rs  asterism_formats_markdown.diff  asterism_formats_markdown.rs.chloro.rs  asterism_formats_markdown.rs.diff  asterism_highlight.chloro.rs  asterism_highlight.diff  asterism_highlight.rs.chloro.rs  asterism_highlight.rs.diff  asterism_input.chloro.rs  asterism_input.diff  asterism_input.rs.chloro.rs  asterism_input.rs.diff  asterism_lib.chloro.rs  asterism_lib.diff  asterism_lib.rs.chloro.rs  asterism_lib.rs.diff  asterism_main.chloro.rs  asterism_main.diff  asterism_main.rs.chloro.rs  asterism_main.rs.diff  asterism_section.chloro.rs  (+1703 more)
chloro-core/tests/conformance/snapshots/asterism/: app_state.chloro.rs  app_state.diff  app_state_min.chloro.rs  config.diff  edit_plan.chloro.rs  edit_plan.diff
chloro-core/tests/conformance/snapshots/ra/hir/: src_attrs.chloro.rs  src_attrs.diff  src_attrs.rustfmt.rs  src_db.chloro.rs  src_db.diff  src_display.diff  (+38 more)
chloro-core/tests/nodes/: block.rs  enumdef.rs  function.rs  implblock.rs  module.rs  structdef.rs  useitem.rs
chloro-core/tests/nodes/snapshots/: nodes__async_function.snap  nodes__const_function.snap  nodes__function_declaration_no_body.snap  nodes__function_with_lifetime.snap  nodes__function_with_params.snap  nodes__function_with_where_clause.snap  nodes__generic_function.snap  nodes__public_function.snap  nodes__simple_function.snap  nodes__unsafe_function.snap
chloro-core/tests/roundtrip/: basic.rs  batch.rs  compare.rs  helpers.rs  main.rs
chloro-core/tests/roundtrip/helpers/: comparison.rs  fixture.rs  rustfmt.rs
chloro-core/tests/roundtrip/output/: asterism_app_state.diff  asterism_app_state.rs.chloro.rs  asterism_config.diff  asterism_edit_plan.diff  asterism_formats.rs.diff  asterism_formats_difftastic.rs.diff  asterism_formats_markdown.rs.diff  asterism_highlight.rs.diff  asterism_input.rs.diff  asterism_lib.rs.diff  asterism_main.rs.diff  asterism_section.rs.diff  asterism_tests_app_state.rs.diff  asterism_tests_difftastic.rs.diff  asterism_tests_edit_plan.rs.diff  asterism_tests_input.rs.diff  asterism_tests_section_move.rs.chloro.rs  asterism_tests_section_move.rs.diff  asterism_ui.rs.diff
chloro-core/tests/roundtrip/snapshots/: roundtrip__basic__app_state_chloro.snap  roundtrip__basic__app_state_formatted.snap  roundtrip__basic__app_state_rustfmt.snap  roundtrip__compare__chloro_vs_rustfmt_diff.snap
chloro-core/tests/snapshots/: basic__enum_formatting_with_docs.snap  basic__function_formatting.snap  basic__struct_formatting.snap
chloro/src/: cli.rs  lib.rs
chloro/src/cli/: args.rs  logs.rs  orchestrate.rs  report.rs  worker.rs
(+1784 files in other folders)
