[workspace]
members = ["chloro", "chloro-core"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lmmx/chloro"
rust-version = "1.82.0"

[workspace.dependencies]
assert_cmd = "2"
chloro-core = { path = "chloro-core", version = "0.5.3" }
facet = "0.30.0"
facet-args = "0.30.0"
insta = "1.0"
tempfile = "3"
