[package]
description = "Core functionality for chloro - a minimal Rust code formatter"
documentation = "https://docs.rs/chloro-core"
edition.workspace = true
homepage = "https://github.com/lmmx/chloro"
include = ["README.md", "src/**/*"]
license.workspace = true
name = "chloro-core"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.5.4"

[features]
default = []

[dependencies]
ctor = "0.6.1"
ra_ap_syntax = "0.0.259"

[dev-dependencies]
braces = "0.2.6"
ctor = "0.6.1"
duct = "1.1.1"
imara-diff = "0.2.0"
insta.workspace = true
rust-format = "0.3.4"
tempfile.workspace = true
walkdir = "2.5.0"
