[package]
description = "Core functionality for chloro - a minimal Rust code formatter"
documentation = "https://docs.rs/chloro-core"
edition.workspace = true
homepage = "https://github.com/lmmx/chloro"
include = ["README.md", "src/**/*"]
license.workspace = true
name = "chloro-core"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.6.0"

[features]
default = []

[dependencies]
ctor = "0.6.1"

# free of syn (see issue #21107, PR #21114), use git rev until crate is released (0.0.260)
# https://github.com/rust-lang/rust-analyzer/pull/21114
ra_ap_syntax = { git = "https://github.com/rust-lang/rust-analyzer.git", package = "syntax", rev = "2443cce41ad24fe7d6ac47e9fe756036c9734028", version = "*" }
# ra_ap_syntax = "0.0.259"

[dev-dependencies]
braces = "0.2.6"
ctor = "0.6.1"
duct = "1.1.1"
imara-diff = "0.2.0"
insta.workspace = true
rust-format = "0.3.4"
tempfile.workspace = true
walkdir = "2.5.0"
